version/0.14/_sources/api/solver/_autosummary/settings/thermal_accom_coefficient.rst.txt
:orphan:

.. _thermal_accom_coefficient:

thermal_accom_coefficient
=========================

.. autoclass:: ansys.fluent.core.solver.settings_231.thermal_accom_coefficient.thermal_accom_coefficient

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

